chore(jdk-annotation-processor): extract shared compiler setup into AnnotationProcessorTests base class (#90)